--- a/package.json
+++ b/package.json
@@ -1,10 +1,4 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
@@ -16,5 +10,15 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.0",
         "vue": "^3.4.0"
+    },
+    "private": true,
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build"
+    },
+    "type": "module",
+    "dependencies": {
+        "@headlessui/vue": "^1.7",
+        "@heroicons/vue": "^2.2.0"
     }
 }
